--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 								<ul>
 									
 									<li class="active"><span>About app</span></li>
-									<li><a class="link" href="../maps.me/wallet/index.html">Wallet</a></li>
-									<li><a class="link" href="../maps.me/token/index.html">Token</a></li>
+									<li><a class="link" href="../wallet/index.html">Wallet</a></li>
+									<li><a class="link" href="../token/index.html">Token</a></li>
 									<li><a class="link" href="../trust/index.html">Trust</a></li>
 								</ul>
 								<div class="select-lang js_open_block" style="display: none;">
